[gd_scene load_steps=34 format=2]

[ext_resource path="res://Sprites/Player & Enemy/Player New (AGOH).png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Other/pngfind.com-dark-aura-png-4887855.png" type="Texture" id=3]
[ext_resource path="res://Scene/Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Player & Enemy/Robot Head.png" type="Texture" id=6]
[ext_resource path="res://Audio/SFX/Reloadingsfx.wav" type="AudioStream" id=7]
[ext_resource path="res://Sprites/Player & Enemy/RobotBackHand.png" type="Texture" id=8]
[ext_resource path="res://Audio/SFX/Fire.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/SFX/NoAmmo.wav" type="AudioStream" id=10]
[ext_resource path="res://Scene/Dash.tscn" type="PackedScene" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.9935
height = 37.5799

[sub_resource type="CircleShape2D" id=2]
radius = 32.6935

[sub_resource type="CircleShape2D" id=3]
radius = 111.024

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 80.2284, 42.4364 )

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/AttackHitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "BigAttack1"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/MurasamaSlash/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "BigAttack2"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/MurasamaSlash/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=8]
resource_name = "BigDownslash"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 53, 54, 55, 56 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/MurasamaDownSlash/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]
resource_name = "BigUpslash"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 59, 60 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/MurasamaUpSlash/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=10]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/DownslashHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=12]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Idle (holdgun)"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 65, 66, 67, 68, 69, 70 ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18 ]
}

[sub_resource type="Animation" id=15]
resource_name = "PistolFire"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/BackHand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[sub_resource type="Animation" id=16]
length = 1.5

[sub_resource type="Animation" id=17]
resource_name = "RifleFire"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/BackHand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16 ]
}

[sub_resource type="Animation" id=18]
resource_name = "SniperFire"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/BackHand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19 ]
}

[sub_resource type="Animation" id=19]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=20]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 33, 34, 35, 36, 37 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/UpslashHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=21]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=22]
resource_name = "dbShotgunFire"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/BackHand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}

[sub_resource type="Animation" id=23]
resource_name = "lrShotgunFire"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/BackHand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
"Saved",
]]
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.32582, 2.05638 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 2.05638 )
scale = Vector2( 0.132969, 0.132969 )
texture = ExtResource( 3 )
energy = 0.5
shadow_enabled = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.32582, 2.05638 )
texture = ExtResource( 1 )
hframes = 8
vframes = 9
frame = 23

[node name="Head" type="Sprite" parent="Sprite"]
position = Vector2( -1.32582, -19.6483 )
texture = ExtResource( 6 )

[node name="BackHand" type="Sprite" parent="Sprite"]
position = Vector2( -13.8258, -3.77976 )
texture = ExtResource( 8 )
hframes = 4
vframes = 5
frame = 19

[node name="Position2D" type="Position2D" parent="Sprite/BackHand"]
position = Vector2( 51.8258, -6.7932 )

[node name="AttackHitBox" type="Area2D" parent="Sprite" groups=[
"Attack",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AttackHitBox"]
position = Vector2( 38, -3.77976 )
shape = SubResource( 2 )
disabled = true

[node name="DownslashHitbox" type="Area2D" parent="Sprite" groups=[
"Attack",
]]
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/DownslashHitbox"]
position = Vector2( 2.62203, 37.43 )
shape = SubResource( 2 )
disabled = true

[node name="UpslashHitbox" type="Area2D" parent="Sprite" groups=[
"Attack",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/UpslashHitbox"]
position = Vector2( 2.62203, -36.8913 )
shape = SubResource( 2 )
disabled = true

[node name="MurasamaSlash" type="Area2D" parent="Sprite" groups=[
"Attack",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/MurasamaSlash"]
position = Vector2( 15.2216, -3.77976 )
shape = SubResource( 3 )
disabled = true

[node name="MurasamaUpSlash" type="Area2D" parent="Sprite" groups=[
"Attack",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/MurasamaUpSlash"]
position = Vector2( -10.2056, -27.0879 )
shape = SubResource( 3 )
disabled = true

[node name="MurasamaDownSlash" type="Area2D" parent="Sprite" groups=[
"Attack",
]]
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/MurasamaDownSlash"]
position = Vector2( 2.62203, 13.7014 )
shape = SubResource( 3 )
disabled = true

[node name="MurasamaDashSlash2" type="Area2D" parent="Sprite" groups=[
"Attack",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/MurasamaDashSlash2"]
position = Vector2( 55.3725, -2.05638 )
shape = SubResource( 4 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/BigAttack1 = SubResource( 6 )
anims/BigAttack2 = SubResource( 7 )
anims/BigDownslash = SubResource( 8 )
anims/BigUpslash = SubResource( 9 )
anims/Downslash = SubResource( 10 )
anims/Fall = SubResource( 11 )
anims/Idle = SubResource( 12 )
"anims/Idle (holdgun)" = SubResource( 13 )
anims/Jump = SubResource( 14 )
anims/PistolFire = SubResource( 15 )
"anims/Player Death" = SubResource( 16 )
anims/RifleFire = SubResource( 17 )
anims/SniperFire = SubResource( 18 )
anims/SuperAttack = SubResource( 19 )
anims/Upslash = SubResource( 20 )
"anims/Walk (freehand)" = SubResource( 21 )
anims/dbShotgunFire = SubResource( 22 )
anims/lrShotgunFire = SubResource( 23 )

[node name="Camera" parent="." instance=ExtResource( 5 )]
smoothing_enabled = true
smoothing_speed = 3.0

[node name="Dash" parent="." instance=ExtResource( 11 )]

[node name="AttackCooldown" type="Timer" parent="."]

[node name="DashCooldown" type="Timer" parent="."]

[node name="Reload" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -16.824

[node name="Fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -9.177

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -9.177

[connection signal="body_entered" from="Sprite/DownslashHitbox" to="." method="_on_DownslashHitbox_body_entered"]
[connection signal="body_entered" from="Sprite/MurasamaDownSlash" to="." method="_on_MurasamaDownSlash_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
